--- a/config/GregTech/WorldGeneration.cfg
+++ b/config/GregTech/WorldGeneration.cfg
@@ -16,16 +16,16 @@ general {
 worldgen {
     I:AmountOfCustomLargeVeinSlots_16=16
     I:AmountOfCustomSmallOreSlots_16=16
-    B:nether.stone.blackgranite.huge_false=false
-    B:nether.stone.blackgranite.large_false=false
-    B:nether.stone.blackgranite.medium_false=false
-    B:nether.stone.blackgranite.small_false=false
-    B:nether.stone.blackgranite.tiny_false=false
-    B:nether.stone.redgranite.huge_false=false
-    B:nether.stone.redgranite.large_false=false
-    B:nether.stone.redgranite.medium_false=false
-    B:nether.stone.redgranite.small_false=false
-    B:nether.stone.redgranite.tiny_false=false
+    B:nether.stone.blackgranite.huge_false=true
+    B:nether.stone.blackgranite.large_false=true
+    B:nether.stone.blackgranite.medium_false=true
+    B:nether.stone.blackgranite.small_false=true
+    B:nether.stone.blackgranite.tiny_false=true
+    B:nether.stone.redgranite.huge_false=true
+    B:nether.stone.redgranite.large_false=true
+    B:nether.stone.redgranite.medium_false=true
+    B:nether.stone.redgranite.small_false=true
+    B:nether.stone.redgranite.tiny_false=true
     B:ore.mix.apatite_true=true
     B:ore.mix.bauxite_true=true
     B:ore.mix.beryllium_true=true
@@ -109,7 +109,7 @@ worldgen {
     B:ore.small.lapis_true=true
     B:ore.small.lead_true=true
     B:ore.small.netherquartz_true=true
-    B:ore.small.nickel_true=true
+    B:ore.small.nickel_true=false
     B:ore.small.olivine_true=true
     B:ore.small.opal_true=true
     B:ore.small.platinum_true=true
@@ -124,16 +124,16 @@ worldgen {
     B:ore.small.tin_true=true
     B:ore.small.topaz_true=true
     B:ore.small.zinc_true=true
-    B:overworld.stone.blackgranite.huge_true=true
-    B:overworld.stone.blackgranite.large_true=true
-    B:overworld.stone.blackgranite.medium_true=true
-    B:overworld.stone.blackgranite.small_true=true
-    B:overworld.stone.blackgranite.tiny_true=true
-    B:overworld.stone.redgranite.huge_true=true
-    B:overworld.stone.redgranite.large_true=true
-    B:overworld.stone.redgranite.medium_true=true
-    B:overworld.stone.redgranite.small_true=true
-    B:overworld.stone.redgranite.tiny_true=true
+    B:overworld.stone.blackgranite.huge_true=false
+    B:overworld.stone.blackgranite.large_true=false
+    B:overworld.stone.blackgranite.medium_true=false
+    B:overworld.stone.blackgranite.small_true=false
+    B:overworld.stone.blackgranite.tiny_true=false
+    B:overworld.stone.redgranite.huge_true=false
+    B:overworld.stone.redgranite.large_true=false
+    B:overworld.stone.redgranite.medium_true=false
+    B:overworld.stone.redgranite.small_true=false
+    B:overworld.stone.redgranite.tiny_true=false
 
     overworld {
 
@@ -332,9 +332,9 @@ worldgen {
         small {
 
             copper {
-                I:Amount_32=256
+                I:Amount_32=128
                 I:MaxHeight_120=120
-                I:MinHeight_60=30
+                I:MinHeight_60=60
                 B:Nether_true=true
                 I:Ore_35=35
                 B:Overworld_true=true
@@ -342,9 +342,9 @@ worldgen {
             }
 
             tin {
-                I:Amount_32=256
+                I:Amount_32=128
                 I:MaxHeight_120=120
-                I:MinHeight_60=30
+                I:MinHeight_60=60
                 B:Nether_true=true
                 I:Ore_57=57
                 B:Overworld_true=true
@@ -372,9 +372,9 @@ worldgen {
             }
 
             iron {
-                I:Amount_16=256
+                I:Amount_16=64
                 I:MaxHeight_80=80
-                I:MinHeight_40=30
+                I:MinHeight_40=10
                 B:Nether_true=true
                 I:Ore_32=32
                 B:Overworld_true=true
@@ -404,7 +404,7 @@ worldgen {
             gold {
                 I:Amount_8=8
                 I:MaxHeight_40=40
-                I:MinHeight_20=20
+                I:MinHeight_20=10
                 B:Nether_true=true
                 I:Ore_86=86
                 B:Overworld_true=true
@@ -414,7 +414,7 @@ worldgen {
             silver {
                 I:Amount_8=8
                 I:MaxHeight_40=40
-                I:MinHeight_20=20
+                I:MinHeight_20=10
                 B:Nether_true=true
                 I:Ore_54=54
                 B:Overworld_true=true
@@ -432,9 +432,9 @@ worldgen {
             }
 
             lapis {
-                I:Amount_4=16
+                I:Amount_4=8
                 I:MaxHeight_40=40
-                I:MinHeight_20=20
+                I:MinHeight_20=10
                 B:Nether_false=false
                 I:Ore_526=526
                 B:Overworld_true=true
@@ -442,9 +442,9 @@ worldgen {
             }
 
             diamond {
-                I:Amount_2=2
-                I:MaxHeight_10=10
-                I:MinHeight_5=5
+                I:Amount_2=4
+                I:MaxHeight_10=30
+                I:MinHeight_5=10
                 B:Nether_true=true
                 I:Ore_500=500
                 B:Overworld_true=true
@@ -452,7 +452,7 @@ worldgen {
             }
 
             emerald {
-                I:Amount_1=1
+                I:Amount_1=2
                 I:MaxHeight_250=250
                 I:MinHeight_5=5
                 B:Nether_true=true
@@ -462,7 +462,7 @@ worldgen {
             }
 
             ruby {
-                I:Amount_1=1
+                I:Amount_1=2
                 I:MaxHeight_250=250
                 I:MinHeight_5=5
                 B:Nether_true=true
@@ -603,8 +603,8 @@ worldgen {
 
             redstone {
                 I:Amount_8=32
-                I:MaxHeight_20=20
-                I:MinHeight_5=5
+                I:MaxHeight_20=40
+                I:MinHeight_5=10
                 B:Nether_true=true
                 I:Ore_810=810
                 B:Overworld_true=true
@@ -663,7 +663,7 @@ worldgen {
 
             sulfur_o {
                 I:Amount_8=8
-                I:MaxHeight_15=15
+                I:MaxHeight_15=30
                 I:MinHeight_5=5
                 B:Nether_false=false
                 I:Ore_22=22
@@ -850,7 +850,7 @@ worldgen {
                 I:OreSporadiclyInbetween_324=324
                 I:OreSporaticlyAround_326=326
                 B:Overworld_false=false
-                I:RandomWeight_10=10
+                I:RandomWeight_10=20
                 I:Size_32=32
                 B:TheEnd_true=true
             }
@@ -895,7 +895,7 @@ worldgen {
                 B:Nether_true=true
                 I:OrePrimaryLayer_870=870
                 I:OreSecondaryLayer_870=870
-                I:OreSporadiclyInbetween_32=32
+                I:OreSporadiclyInbetween_32=930
                 I:OreSporaticlyAround_923=923
                 B:Overworld_true=true
                 I:RandomWeight_160=160
@@ -938,8 +938,8 @@ worldgen {
             cassiterite {
                 I:Density_5=5
                 B:EndAsteroid_true=true
-                I:MaxHeight_120=80
-                I:MinHeight_40=20
+                I:MaxHeight_120=120
+                I:MinHeight_40=40
                 B:Nether_false=false
                 I:OrePrimaryLayer_57=57
                 I:OreSecondaryLayer_57=57
@@ -955,11 +955,11 @@ worldgen {
                 I:Density_4=4
                 B:EndAsteroid_false=false
                 I:MaxHeight_120=120
-                I:MinHeight_80=30
+                I:MinHeight_80=40
                 B:Nether_true=true
                 I:OrePrimaryLayer_840=840
                 I:OreSecondaryLayer_840=840
-                I:OreSporadiclyInbetween_35=35
+                I:OreSporadiclyInbetween_35=840
                 I:OreSporaticlyAround_945=945
                 B:Overworld_true=true
                 I:RandomWeight_70=70
@@ -1006,9 +1006,9 @@ worldgen {
                 I:MinHeight_10=10
                 B:Nether_true=true
                 I:OrePrimaryLayer_855=855
-                I:OreSecondaryLayer_32=32
+                I:OreSecondaryLayer_32=855
                 I:OreSporadiclyInbetween_834=834
-                I:OreSporaticlyAround_35=35
+                I:OreSporaticlyAround_35=834
                 B:Overworld_true=true
                 I:RandomWeight_80=80
                 I:Size_24=24
@@ -1023,7 +1023,7 @@ worldgen {
                 B:Nether_false=false
                 I:OrePrimaryLayer_822=822
                 I:OreSecondaryLayer_822=822
-                I:OreSporadiclyInbetween_19=19
+                I:OreSporadiclyInbetween_19=938
                 I:OreSporaticlyAround_918=918
                 B:Overworld_true=true
                 I:RandomWeight_80=80
@@ -1086,9 +1086,9 @@ worldgen {
                 I:MinHeight_10=10
                 B:Nether_true=true
                 I:OrePrimaryLayer_906=906
-                I:OreSecondaryLayer_34=34
-                I:OreSporadiclyInbetween_827=827
-                I:OreSporaticlyAround_909=909
+                I:OreSecondaryLayer_34=909
+                I:OreSporadiclyInbetween_827=909
+                I:OreSporaticlyAround_909=827
                 B:Overworld_true=true
                 I:RandomWeight_40=40
                 I:Size_16=16
@@ -1105,8 +1105,8 @@ worldgen {
                 I:OreSecondaryLayer_52=52
                 I:OreSporadiclyInbetween_85=85
                 I:OreSporaticlyAround_84=84
-                B:Overworld_true=true
-                I:RandomWeight_5=5
+                B:Overworld_true=false
+                I:RandomWeight_5=20
                 I:Size_16=16
                 B:TheEnd_true=true
             }
@@ -1152,7 +1152,7 @@ worldgen {
                 I:OrePrimaryLayer_905=905
                 I:OreSecondaryLayer_905=905
                 I:OreSporadiclyInbetween_520=520
-                I:OreSporaticlyAround_67=67
+                I:OreSporaticlyAround_67=520
                 B:Overworld_true=true
                 I:RandomWeight_30=30
                 I:Size_16=16
@@ -1167,10 +1167,10 @@ worldgen {
                 B:Nether_false=false
                 I:OrePrimaryLayer_882=882
                 I:OreSecondaryLayer_942=942
-                I:OreSporadiclyInbetween_48=48
+                I:OreSporadiclyInbetween_48=942
                 I:OreSporaticlyAround_883=883
                 B:Overworld_true=true
-                I:RandomWeight_5=5
+                I:RandomWeight_5=10
                 I:Size_16=16
                 B:TheEnd_true=true
             }
@@ -1184,7 +1184,7 @@ worldgen {
                 I:OrePrimaryLayer_910=910
                 I:OreSecondaryLayer_910=910
                 I:OreSporadiclyInbetween_841=841
-                I:OreSporaticlyAround_6=6
+                I:OreSporaticlyAround_6=841
                 B:Overworld_true=true
                 I:RandomWeight_10=10
                 I:Size_16=16
@@ -1202,7 +1202,7 @@ worldgen {
                 I:OreSporadiclyInbetween_503=503
                 I:OreSporaticlyAround_504=504
                 B:Overworld_true=true
-                I:RandomWeight_60=60
+                I:RandomWeight_60=30
                 I:Size_16=16
                 B:TheEnd_false=false
             }
@@ -1328,7 +1328,7 @@ worldgen {
                 I:OrePrimaryLayer_8=8
                 I:OreSecondaryLayer_8=8
                 I:OreSporadiclyInbetween_501=501
-                I:OreSporaticlyAround_96=96
+                I:OreSporaticlyAround_96=873
                 B:Overworld_true=true
                 I:RandomWeight_30=30
                 I:Size_16=16
@@ -1621,35 +1621,11 @@ worldgen {
 
             mix {
 
-                magnetite {
-                    B:Overworld_true=true
-                }
-
-                sapphire {
-                    B:Overworld_true=true
-                }
-
-                soapstone {
-                    B:Overworld_true=true
-                }
-
-                beryllium {
-                    B:Overworld_true=true
-                }
-
                 apatite {
                     B:Overworld_true=true
                 }
 
-                iron {
-                    B:Overworld_true=true
-                }
-
-                tetrahedrite {
-                    B:Overworld_true=true
-                }
-
-                bauxite {
+                cassiterite {
                     B:Overworld_true=true
                 }
 
@@ -1657,7 +1633,19 @@ worldgen {
                     B:Overworld_false=false
                 }
 
-                redstone {
+                galena {
+                    B:Overworld_true=true
+                }
+
+                sapphire {
+                    B:Overworld_true=true
+                }
+
+                tetrahedrite {
+                    B:Overworld_true=true
+                }
+
+                manganese {
                     B:Overworld_true=true
                 }
 
@@ -1665,7 +1653,15 @@ worldgen {
                     B:Overworld_true=true
                 }
 
-                copper {
+                netherquartz {
+                    B:Overworld_false=false
+                }
+
+                magnetite {
+                    B:Overworld_true=true
+                }
+
+                oilsand {
                     B:Overworld_true=true
                 }
 
@@ -1677,35 +1673,11 @@ worldgen {
                     B:Overworld_true=true
                 }
 
-                quartz {
+                iron {
                     B:Overworld_true=true
-                }
-
-                oilsand {
-                    B:Overworld_true=true
-                }
-
-                monazite {
-                    B:Overworld_true=true
-                }
-
-                netherquartz {
-                    B:Overworld_false=false
                 }
 
                 pitchblende {
-                    B:Overworld_true=true
-                }
-
-                manganese {
-                    B:Overworld_true=true
-                }
-
-                galena {
-                    B:Overworld_true=true
-                }
-
-                olivine {
                     B:Overworld_true=true
                 }
 
@@ -1713,27 +1685,11 @@ worldgen {
                     B:Overworld_true=true
                 }
 
-                cassiterite {
+                copper {
                     B:Overworld_true=true
                 }
 
-                tungstate {
-                    B:Overworld_true=true
-                }
-
-                salts {
-                    B:Overworld_true=true
-                }
-
-                diamond {
-                    B:Overworld_true=true
-                }
-
-                platinum {
-                    B:Overworld_true=true
-                }
-
-                uranium {
+                quartz {
                     B:Overworld_true=true
                 }
 
@@ -1741,8 +1697,57 @@ worldgen {
                     B:Overworld_true=true
                 }
 
+                salts {
+                    B:Overworld_true=true
+                }
+
+                monazite {
+                    B:Overworld_true=true
+                }
+
+                olivine {
+                    B:Overworld_true=true
+                }
+
+                diamond {
+                    B:Overworld_true=true
+                }
+
+                redstone {
+                    B:Overworld_true=true
+                }
+
+                beryllium {
+                    B:Overworld_true=true
+                }
+
+                uranium {
+                    B:Overworld_true=true
+                }
+
+                soapstone {
+                    B:Overworld_true=true
+                }
+
                 naquadah {
                     B:Overworld_false=false
+                }
+
+                bauxite {
+                    B:Overworld_true=true
+                }
+
+                platinum {
+                    B:Overworld_false=false
+                    B:Overworld_true=false
+                }
+
+                tungstate {
+                    B:Overworld_true=true
+                }
+
+                molybdenum {
+                    B:Overworld_true=true
                 }
 
             }
@@ -1937,6 +1942,62 @@ worldgen {
 
                     huge {
                         B:Overworld_true=true
+                    }
+
+                }
+
+            }
+
+        }
+
+        nether {
+
+            stone {
+
+                blackgranite {
+
+                    tiny {
+                        B:Overworld_false=false
+                    }
+
+                    small {
+                        B:Overworld_false=false
+                    }
+
+                    medium {
+                        B:Overworld_false=false
+                    }
+
+                    large {
+                        B:Overworld_false=false
+                    }
+
+                    huge {
+                        B:Overworld_false=false
+                    }
+
+                }
+
+                redgranite {
+
+                    tiny {
+                        B:Overworld_false=false
+                    }
+
+                    small {
+                        B:Overworld_false=false
+                    }
+
+                    medium {
+                        B:Overworld_false=false
+                    }
+
+                    large {
+                        B:Overworld_false=false
+                    }
+
+                    huge {
+                        B:Overworld_false=false
                     }
 
                 }
